Поддержка кликов мыши на спрайтах

--- a/se2dindexexample.html
+++ b/se2dindexexample.html
@@ -10,13 +10,13 @@
 	<script type="text/javascript">
 		window.onload = function() {
 			new SimpleEngine2D("mycan", 44);
-			new iParserTool();
+			//new iParserTool();
 		}
 	</script>
-	<script src="js/se2d/se2d.js"></script>
-	<script src="js/se2d/dom.js"></script>
-	<script src="js/iparseertool.js"></script>
-	<script src="js/unittest.js"></script>
+	<script src="se2d.js"></script>
+	<script src="om.js"></script>
+	<!--script src="js/iparseertool.js"></script>
+	<script src="js/unittest.js"></script-->
 	
 </head>
 
